@@ -181,7 +181,7 @@ public class RustProjectTemplateWizardIterator implements WizardDescriptor./*Pro
                 JComponent jc = (JComponent) c;
                 // Step #.
                 // TODO if using org.openide.dialogs >= 7.8, can use WizardDescriptor.PROP_*:
-                jc.putClientProperty("WizardPanel_contentSelectedIndex", new Integer(i));
+                jc.putClientProperty("WizardPanel_contentSelectedIndex", Integer.valueOf(i));
                 // Step name (actually the whole list for reference).
                 jc.putClientProperty("WizardPanel_contentData", steps);
             }
@@ -197,7 +197,7 @@ public class RustProjectTemplateWizardIterator implements WizardDescriptor./*Pro
 
     public String name() {
         return MessageFormat.format("{0} of {1}",
-                new Object[]{new Integer(index + 1), new Integer(panels.length)});
+                new Object[]{Integer.valueOf(index + 1), Integer.valueOf(panels.length)});
     }
 
     public boolean hasNext() {
